syntax = "proto3";option java_multiple_files = true;package vn.techres.microservice.grpc.java.elasticsearch.order_online_qr;service OrderOnlineQRService {  rpc FindByRestaurantId (OrderOnlineQRRequest) returns (BaseGRPCResponse) {}}message OrderOnlineQRRequest {  int32 restaurant_id = 1;  string lat = 2;  string lng = 3;}message BaseGRPCResponse {  int32 status = 1;  string message = 2;  RestaurantResponse data = 3;}message RestaurantResponse {  int32 id = 1;  string name = 2;  string banner = 3;  string logo = 4;  repeated RestaurantBrandResponse restaurant_brands = 5;}message RestaurantBrandResponse {  int32 id = 1;  string name = 2;  string banner = 3;  string logo_url = 4;  repeated BranchResponse branches = 5;}message BranchResponse {  int32 id = 1;  string name = 2;  string street_name = 3;  string address_full_text = 4;  double distance_km = 5;}