syntax = "proto3";

option java_multiple_files = true;
package vn.techres.microservice.grpc.java.elasticsearch.restaurants;


service RestaurantService {
    rpc FindById (RestaurantByIdRequest) returns (BaseResponse) {}
}

message RestaurantByIdRequest {
    int32 restaurant_id = 1;
}

message BaseResponse {
    int32 status = 1;
    string message = 2;
    RestaurantResponse data = 3;
}


message RestaurantResponse {
	int32 id = 1;
    int32 service_restaurant_level_id = 2;
    string email = 3;
    string phone = 4;
    string info = 5;
    string name = 6;
    string banner = 7;
    string brand_name = 8;
    string address = 9;
    int64 customer_partner_id = 10;
    string customer_partner_node_access_token = 11;
    string restaurant_name = 12;
    string server_ip_address = 13;
    int32 status = 14;
    int32 is_done_setup = 15;
    int32 is_public = 16;
    float restaurant_balance = 17;
    string tax_number = 18;
    string logo = 19;
    repeated string image_urls = 20;
    RestaurantSetting setting = 21;
    string domain = 22;
    int32 techres_saler_id = 23;
    int32 city_id = 24;
    int32 district_id = 25;
    int32 ward_id = 26;
    int32 is_trial = 27;
    string experiment_start_at = 28;
    string experiment_end_at = 29;
}


message RestaurantSetting {
    string email_smtp_host = 1;
    string email_smtp_port = 2;
    string email_smtp_from = 3;
    string email_smtp_username = 4;
    string email_smtp_password = 5;
    string username_prefix = 6;
    int32 number_month_after_start_working_for_bonus_leave_day = 7;
    int32 is_enable_tms = 8;
    int32 is_enable_kaizen_bonus_level = 9;
    int32 min_distance_checkin = 10;
    int32 is_enable_membership_card = 11;
    int32 is_share_customer_on_app_party = 12;
    int32 number_day_not_checkin_to_lock_account = 13;
    int32 number_day_not_checkin_to_quit_job = 14;
    int32 one_point_invite_customer_register_membership_to_money_amount = 15;
    int32 point_bonus_for_employee_when_invite_customer_register_membership = 16;
    int32 minute_atfer_register_membershipcard_allow_to_use_promotion_point = 17;
    int32 number_minute_allow_booking_before_open_order = 18;
    int32 bonus_percent_food_review_for_master_chef = 19;
    int32 is_enable_office_branch = 20;
}
