syntax = "proto3";

option java_multiple_files = true;
package vn.techres.microservice.grpc.java.elasticsearch.table;

service TableService {
    rpc findTableByRestaurantIdAndBranchIdAndAreaId (TableRequest) returns (BaseGRPCResponse ) {}
    rpc FindById (TableFindByIdRequest) returns (BaseResponse ) {}
}

message TableRequest {
    int32 restaurant_id = 1;
    int32 branch_id = 2;
    int32 area_id = 3;
}

message TableFindByIdRequest {
    int32 table_id = 1;
}

message BaseGRPCResponse  {
    int32 status = 1;
    string message = 2;
    repeated TableResponse data = 3;
}

message BaseResponse  {
    int32 status = 1;
    string message = 2;
    TableResponse data = 3;
}

message TableResponse {
    int32 id = 1;
    int32 restaurant_id = 2;
    int32 branch_id = 3;
    int32 area_id = 4;
    string name = 5;
    string qrcode = 6;
    string description = 7;
    int32 empty_slot = 8;
    int32 total_slot = 9;
    int32 table_status = 10;
    int32 order_id = 11;
    int32 order_status = 12;
    string table_merge_id = 13;
    string order_merge_id = 14;
    string table_merge_name = 15;
    string children_table_merge_names = 16;
    int32 employee_id = 17;
    int32 is_take_away = 18;
    int32 status = 19;
    int32 is_deleted = 20;
    string created_at = 21;
    string updated_at = 22;
}